All sample data gen notebooks retested with new folder structures

--- a/src/notebooks/generate_samples/Generate_CustomerAccount.ipynb
+++ b/src/notebooks/generate_samples/Generate_CustomerAccount.ipynb
@@ -17,7 +17,7 @@
     "- **20% of customers** have only one account (randomly assigned to PA-1 or PA-2)\n",
     "\n",
     "## Output\n",
-    "- File: `C:\\temp\\samples\\CustomerAccount_samples.csv`\n",
+    "- File: `C:\\temp\\samples\\output\\CustomerAccount_samples.csv`\n",
     "- Contains CustomerAccountId, ParentAccountId, CustomerId, IsoCurrencyCode fields\n",
     "\n",
     "---"
@@ -35,7 +35,7 @@
      "text": [
       "🎯 GENERATING CUSTOMER ACCOUNT SAMPLE DATA\n",
       "Customer Count: 513\n",
-      "Output: C:\\temp\\samples\\CustomerAccount_samples.csv\n",
+      "Output: C:\\temp\\samples\\output\\CustomerAccount_Samples.csv\n",
       "==================================================\n",
       "🔄 Generating customer account data...\n",
       "✅ Customer account generation complete!\n"
@@ -56,7 +56,7 @@
     "\n",
     "# Configuration\n",
     "CUSTOMER_COUNT = 513  # Number of customers\n",
-    "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
+    "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\\\\output\"  # Output folder\n",
     "OUTPUT_FILE = \"CustomerAccount_Samples.csv\"\n",
     "\n",
     "# Create output directory\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "cd76bad9",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
       "  Fabric: 475 accounts ( 51.4%)\n",
       "  ADB: 450 accounts ( 48.6%)\n",
       "\n",
-      "💾 SAVED TO: C:\\temp\\samples\\CustomerAccount_samples.csv\n",
+      "💾 SAVED TO: C:\\temp\\samples\\output\\CustomerAccount_Samples.csv\n",
       "📊 Total Records: 925\n",
       "📈 Columns: CustomerAccountId, ParentAccountId, CustomerAccountName, CustomerId, IsoCurrencyCode\n",
       "\n",
