--- a/src/notebooks/generate_samples/Generate_Product.ipynb
+++ b/src/notebooks/generate_samples/Generate_Product.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3d56f323",
+   "id": "71d4f224",
    "metadata": {},
    "source": [
     "# Generate Enriched Product Sample Data\n",
@@ -18,17 +18,17 @@
     "- **Product_Samples.csv**: Enriched product data with CategoryName filled in\n",
     "\n",
     "## Process\n",
-    "1. Read both input files\n",
+    "1. Read both input files from C:\\temp\\samples\n",
     "2. Perform lookup/merge on CategoryID\n",
-    "3. Generate enriched output file\n",
+    "3. Generate enriched output file with all original data + CategoryName\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "30e3e036",
+   "execution_count": null,
+   "id": "fbbdffb9",
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
      "text": [
       "🎯 ENRICHING PRODUCT DATA WITH CATEGORY NAMES\n",
       "Input Folder: C:\\temp\\samples\n",
-      "Product Input: Product_Input.csv\n",
+      "Product Input: Product_Input_Base.csv\n",
       "Category Lookup: ProductCategory_48.csv\n",
       "Output: Product_Samples.csv\n",
       "============================================================\n",
-      "📂 Reading product input: C:\\temp\\samples\\Product_Input.csv\n",
+      "📂 Reading product input: C:\\temp\\samples\\Product_Input_Base.csv\n",
       "✅ Product file read successfully!\n",
       "📊 Shape: (315, 8)\n",
       "📋 Columns: ['ProductID', 'Name', 'Color', 'StandardCost', 'ListPrice', 'Size', 'Weight', 'CategoryID']\n",
@@ -52,12 +52,19 @@
       "📋 Columns: ['CategoryID', 'CategoryName']\n",
       "\n",
       "📖 Sample Product Data (First 5 rows):\n",
-      "   ProductID                       Name  Color  StandardCost  ListPrice Size   Weight  CategoryID\n",
-      "0          1  HL Road Frame - Black, 58  Black     1059.3100    1431.50   58  1016.04          18\n",
-      "1          2    HL Road Frame - Red, 58    Red     1059.3100    1431.50   58  1016.04          18\n",
-      "2          3      Sport-100 Helmet, Red    Red       13.0863      34.99  NaN      NaN          35\n",
-      "3          4    Sport-100 Helmet, Black  Black       13.0863      34.99  NaN      NaN          35\n",
-      "4          5     Mountain Bike Socks, M  White        3.3963       9.50    M      NaN          27\n",
+      "   ProductID                       Name  Color  StandardCost  ListPrice Size  \\\n",
+      "0          1  HL Road Frame - Black, 58  Black     1059.3100    1431.50   58   \n",
+      "1          2    HL Road Frame - Red, 58    Red     1059.3100    1431.50   58   \n",
+      "2          3      Sport-100 Helmet, Red    Red       13.0863      34.99  NaN   \n",
+      "3          4    Sport-100 Helmet, Black  Black       13.0863      34.99  NaN   \n",
+      "4          5     Mountain Bike Socks, M  White        3.3963       9.50    M   \n",
+      "\n",
+      "    Weight  CategoryID  \n",
+      "0  1016.04          18  \n",
+      "1  1016.04          18  \n",
+      "2      NaN          35  \n",
+      "3      NaN          35  \n",
+      "4      NaN          27  \n",
       "\n",
       "📖 Sample Category Data (First 5 rows):\n",
       "   CategoryID    CategoryName\n",
@@ -74,10 +81,11 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Configuration - using the correct absolute path where files exist\n",
-    "INPUT_FOLDER = \"C:\\\\temp\\\\samples\"  # Your files are here\n",
-    "PRODUCT_INPUT_FILE = \"Product_Input.csv\"\n",
+    "# Configuration\n",
+    "INPUT_FOLDER = \"C:\\\\temp\\\\samples\\\\input\"\n",
+    "PRODUCT_INPUT_FILE = \"Product_Input_Base.csv\"\n",
     "CATEGORY_LOOKUP_FILE = \"ProductCategory_48.csv\"\n",
+    "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\\\\output\"\n",
     "OUTPUT_FILE = \"Product_Samples.csv\"\n",
     "\n",
     "print(f\"🎯 ENRICHING PRODUCT DATA WITH CATEGORY NAMES\")\n",
@@ -91,39 +99,15 @@
     "    # Read Product Input file\n",
     "    product_input_path = os.path.join(INPUT_FOLDER, PRODUCT_INPUT_FILE)\n",
     "    print(f\"📂 Reading product input: {product_input_path}\")\n",
-    "    \n",
-    "    if not os.path.exists(product_input_path):\n",
-    "        print(f\"❌ File not found: {product_input_path}\")\n",
-    "        # List what files are actually in the directory\n",
-    "        if os.path.exists(INPUT_FOLDER):\n",
-    "            files_in_folder = os.listdir(INPUT_FOLDER)\n",
-    "            print(f\"📁 Files found in {INPUT_FOLDER}:\")\n",
-    "            for file in files_in_folder:\n",
-    "                print(f\"   - {file}\")\n",
-    "        else:\n",
-    "            print(f\"📁 Directory {INPUT_FOLDER} does not exist\")\n",
-    "        raise FileNotFoundError(f\"Product_Input.csv not found in {INPUT_FOLDER}\")\n",
-    "    \n",
     "    df_products = pd.read_csv(product_input_path)\n",
     "    \n",
     "    print(f\"✅ Product file read successfully!\")\n",
     "    print(f\"📊 Shape: {df_products.shape}\")\n",
     "    print(f\"📋 Columns: {list(df_products.columns)}\")\n",
     "    \n",
-    "    # Check if CategoryName already exists and remove it (it has NaN values)\n",
-    "    if 'CategoryName' in df_products.columns:\n",
-    "        print(f\"🔄 Found existing CategoryName column in Product_Input.csv - removing it\")\n",
-    "        df_products = df_products.drop(columns=['CategoryName'])\n",
-    "        print(f\"✅ Removed CategoryName column. New columns: {list(df_products.columns)}\")\n",
-    "    \n",
     "    # Read Category Lookup file\n",
     "    category_lookup_path = os.path.join(INPUT_FOLDER, CATEGORY_LOOKUP_FILE)\n",
     "    print(f\"\\n📂 Reading category lookup: {category_lookup_path}\")\n",
-    "    \n",
-    "    if not os.path.exists(category_lookup_path):\n",
-    "        print(f\"❌ File not found: {category_lookup_path}\")\n",
-    "        raise FileNotFoundError(f\"ProductCategory_48.csv not found in {INPUT_FOLDER}\")\n",
-    "    \n",
     "    df_categories = pd.read_csv(category_lookup_path)\n",
     "    \n",
     "    print(f\"✅ Category file read successfully!\")\n",
@@ -132,20 +116,16 @@
     "    \n",
     "    # Display sample data\n",
     "    print(f\"\\n📖 Sample Product Data (First 5 rows):\")\n",
-    "    print(df_products.head().to_string())\n",
+    "    print(df_products.head())\n",
     "    \n",
     "    print(f\"\\n📖 Sample Category Data (First 5 rows):\")\n",
-    "    print(df_categories.head().to_string())\n",
+    "    print(df_categories.head())\n",
     "    \n",
-    "except FileNotFoundError as e:\n",
-    "    print(f\"❌ File not found: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error reading input files: {e}\")\n",
     "    print(\"\\n💡 Please ensure both files exist in C:\\\\temp\\\\samples:\")\n",
     "    print(\"   - Product_Input.csv\")\n",
     "    print(\"   - ProductCategory_48.csv\")\n",
-    "    raise\n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Error reading input files: {e}\")\n",
-    "    print(f\"Error type: {type(e).__name__}\")\n",
     "    raise\n",
     "\n",
     "print(\"✅ Input files loaded successfully!\")"
@@ -153,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ef3d57a4",
+   "execution_count": 2,
+   "id": "b8c7180b",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +151,6 @@
       "✅ Merge completed!\n",
       "📊 Original products: 315\n",
       "📊 Enriched products: 315\n",
-      "🔍 Columns after merge: ['ProductID', 'Name', 'Color', 'StandardCost', 'ListPrice', 'Size', 'Weight', 'CategoryID', 'CategoryName']\n",
       "\n",
       "📖 Sample Enriched Data (First 10 rows):\n",
       "   CategoryID CategoryName  ProductID                        Name  Color\n",
@@ -207,14 +186,13 @@
     "# Check for CategoryName column in category file\n",
     "category_name_col = None\n",
     "for col in df_categories.columns:\n",
-    "    if 'categoryname' in col.lower() or 'category_name' in col.lower():\n",
+    "    if 'categoryname' in col.lower() or 'category_name' in col.lower() or 'name' in col.lower():\n",
     "        category_name_col = col\n",
     "        break\n",
     "\n",
     "if category_name_col is None:\n",
     "    print(\"❌ CategoryName column not found in ProductCategory_48.csv\")\n",
     "    print(f\"Available columns: {list(df_categories.columns)}\")\n",
-    "    print(\"Looking for columns containing 'categoryname' or 'category_name'\")\n",
     "    # Try to use second column if it exists\n",
     "    if len(df_categories.columns) >= 2:\n",
     "        category_name_col = df_categories.columns[1]\n",
@@ -224,9 +202,6 @@
     "\n",
     "print(f\"✅ Using CategoryID for lookup\")\n",
     "print(f\"✅ Using '{category_name_col}' as CategoryName\")\n",
-    "\n",
-    "# Perform left join to add CategoryName to products\n",
-    "print(f\"\\n🔗 Merging product data with category names...\")\n",
     "\n",
     "# Before merge - check for missing CategoryIDs\n",
     "product_categories = set(df_products['CategoryID'].dropna())\n",
@@ -238,13 +213,14 @@
     "    print(f\"   Missing: {sorted(list(missing_categories))}\")\n",
     "\n",
     "# Perform the merge\n",
+    "print(f\"\\n🔗 Merging product data with category names...\")\n",
     "df_enriched = df_products.merge(\n",
     "    df_categories[['CategoryID', category_name_col]], \n",
     "    on='CategoryID', \n",
     "    how='left'\n",
     ")\n",
     "\n",
-    "# Rename the category name column to standard name\n",
+    "# Rename the category name column to standard name if needed\n",
     "if category_name_col != 'CategoryName':\n",
     "    df_enriched = df_enriched.rename(columns={category_name_col: 'CategoryName'})\n",
     "\n",
@@ -252,10 +228,7 @@
     "print(f\"📊 Original products: {len(df_products)}\")\n",
     "print(f\"📊 Enriched products: {len(df_enriched)}\")\n",
     "\n",
-    "# Debug: Show columns after merge\n",
-    "print(f\"🔍 Columns after merge: {list(df_enriched.columns)}\")\n",
-    "\n",
-    "# Check for null CategoryNames (products without matching categories)\n",
+    "# Check for null CategoryNames\n",
     "null_category_names = df_enriched['CategoryName'].isnull().sum()\n",
     "if null_category_names > 0:\n",
     "    print(f\"⚠️  Warning: {null_category_names} products have null CategoryName\")\n",
@@ -267,8 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "59f27c06",
+   "execution_count": null,
+   "id": "0f1f4829",
    "metadata": {},
    "outputs": [
     {
@@ -320,8 +293,11 @@
     "print(\"\\n💾 SAVING ENRICHED PRODUCT DATA\")\n",
     "print(\"=\"*50)\n",
     "\n",
+    "# Create output directory if it doesn't exist\n",
+    "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
+    "\n",
     "# Save to output file\n",
-    "output_path = os.path.join(INPUT_FOLDER, OUTPUT_FILE)\n",
+    "output_path = os.path.join(OUTPUT_FOLDER, OUTPUT_FILE)\n",
     "df_enriched.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"✅ Enriched data saved to: {output_path}\")\n",
