--- a/src/notebooks/generate_samples/Pickup_Unique_Customer_Names.ipynb
+++ b/src/notebooks/generate_samples/Pickup_Unique_Customer_Names.ipynb
@@ -8,7 +8,7 @@
     "# Process Customer Names - Keep Unique LastNames\n",
     "\n",
     "## Overview\n",
-    "This notebook reads customer_names.csv and keeps only unique LastName values, sorted alphabetically.\n",
+    "This notebook reads customer_names.csv and keeps only unique LastName values, sorted alphabetically. This is an one time effort. No need to be repeated. The output file is copied to 'C:\\temp\\samples\\customer_names_unique_513.csv'. This file is used as an input base file to generate Customer data. \n",
     "\n",
     "## Input\n",
     "- File: `C:\\temp\\samples\\customer_names.csv`\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7036fe5a",
    "metadata": {},
    "outputs": [
