--- a/src/notebooks/schema/Model_Finance_Domain.ipynb
+++ b/src/notebooks/schema/Model_Finance_Domain.ipynb
@@ -10,19 +10,9 @@
     "## Overview\n",
     "This notebook creates Finance domain tables that integrate with shared master data from the Sales domain.\n",
     "\n",
-    "## Key Achievements\n",
-    "- **Domain-driven design**: Finance-specific business logic\n",
-    "- **Shared master data**: References Customer, Product tables from Sales domain\n",
-    "- **Clean integration**: Links to Sales Order data via foreign keys\n",
-    "- **Enterprise-ready**: Proper accounting and financial tracking\n",
-    "\n",
     "## Schema Structure\n",
     "- **Finance Domain**: 4 tables (Account, Invoice, Payment, Transaction)\n",
     "- **Integration**: Links to shared Customer, Product, Order tables\n",
-    "\n",
-    "## Dependencies\n",
-    "- **Prerequisite**: Run Customer_Product_Order_Simplified_12.ipynb first\n",
-    "- **Shared Tables**: Customer, Product, Order (created by Sales domain)\n",
     "\n",
     "---"
    ]
@@ -34,24 +24,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finance Domain Tables - References Shared Master Data\n",
-    "\n",
     "################################################################################################\n",
-    "# Verify Schema Exists\n",
+    "# Schema Configuration - MODIFY THIS VALUE\n",
     "################################################################################################\n",
     "\n",
     "# Configuration\n",
-    "SCHEMA_NAME = \"retail_simple\"\n",
+    "SCHEMA_NAME = \"finance\"\n",
     "spark.sql(f\"CREATE DATABASE IF NOT EXISTS {SCHEMA_NAME}\")\n",
     "print(f\"✅ {SCHEMA_NAME} schema ready!\")\n",
-    "\n",
-    "print(f\"\\n💰 CREATING FINANCE DOMAIN TABLES\")\n",
-    "print(\"=\"*60)\n",
-    "print(f\"📋 These tables reference shared master data:\")\n",
-    "print(f\"   • Customer (created by Sales domain)\")\n",
-    "print(f\"   • Product (created by Sales domain)\") \n",
-    "print(f\"   • Order (created by Sales domain)\")\n",
-    "print(\"=\"*60)\n",
     "\n",
     "################################################################################################\n",
     "# FINANCE DOMAIN TABLES\n",
@@ -141,20 +121,7 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.Transaction table created!\")\n",
     "\n",
-    "print(f\"\\n✅ All Finance Domain tables created successfully!\")\n",
-    "print(f\"📊 Finance Domain tables: 4\")\n",
-    "print(f\"\\n🔗 CROSS-DOMAIN INTEGRATION:\")\n",
-    "print(f\"   • Invoice.CustomerId → Customer.CustomerId (Sales domain)\")\n",
-    "print(f\"   • Invoice.OrderId → Order.OrderId (Sales domain)\")\n",
-    "print(f\"   • Transaction.CustomerId → Customer.CustomerId (Sales domain)\")\n",
-    "print(f\"   • Transaction.OrderId → Order.OrderId (Sales domain)\")\n",
-    "print(f\"   • Payment.InvoiceId → Invoice.InvoiceId (Finance domain)\")\n",
-    "print(f\"   • Transaction.InvoiceId → Invoice.InvoiceId (Finance domain)\")\n",
-    "\n",
-    "print(f\"\\n🚀 READY FOR DATA PIPELINE:\")\n",
-    "print(f\"   • Sales Order → Finance Invoice\")\n",
-    "print(f\"   • OrderPayment → Finance Payment\") \n",
-    "print(f\"   • Payment → Finance Transaction\")"
+    "print(f\"\\n✅ All Finance Domain tables created successfully!\")"
    ]
   }
  ],
