--- a/src/notebooks/schema/Model_Sales_Domain.ipynb
+++ b/src/notebooks/schema/Model_Sales_Domain.ipynb
@@ -5,24 +5,14 @@
    "id": "75f1a26c",
    "metadata": {},
    "source": [
-    "# Sales - Part of the Operations - Simplified Version \n",
+    "# Sales - Part of the Operations - Simplified \n",
     "\n",
     "## Overview\n",
-    "This notebook creates Sales domain tables that integrate with shared master data.\n",
-    "\n",
-    "## Key Achievements\n",
-    "- **Domain-driven design**: Sales-specific business logic\n",
-    "- **Shared master data**: References Customer, Product tables from master_data schema\n",
-    "- **Clean integration**: Uses foreign keys to shared master data\n",
-    "- **Enterprise-ready**: Proper order processing and payment tracking\n",
+    "This notebook creates Sales domain tables that integrate with shared data.\n",
     "\n",
     "## Schema Structure\n",
     "- **Sales Domain**: 3 tables (Order, OrderLine, OrderPayment)\n",
     "- **Integration**: Links to shared Customer, Product, Location tables\n",
-    "\n",
-    "## Dependencies\n",
-    "- **Prerequisite**: Run Shared_Data.ipynb first\n",
-    "- **Shared Tables**: Customer, Product, Location (created by master_data schema)\n",
     "\n",
     "---"
    ]
@@ -34,24 +24,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sales Domain Tables - References Shared Master Data\n",
-    "\n",
     "################################################################################################\n",
-    "# Verify Schema Exists\n",
+    "# Schema Configuration - MODIFY THIS VALUE\n",
     "################################################################################################\n",
     "\n",
     "# Configuration\n",
-    "SCHEMA_NAME = \"retail_simple\"\n",
+    "SCHEMA_NAME = \"sales\"\n",
     "spark.sql(f\"CREATE DATABASE IF NOT EXISTS {SCHEMA_NAME}\")\n",
     "print(f\"✅ {SCHEMA_NAME} schema ready!\")\n",
-    "\n",
-    "print(f\"\\n🛒 CREATING SALES DOMAIN TABLES\")\n",
-    "print(\"=\"*60)\n",
-    "print(f\"📋 These tables reference shared master data:\")\n",
-    "print(f\"   • master_data.Customer (shared across domains)\")\n",
-    "print(f\"   • master_data.Product (shared across domains)\") \n",
-    "print(f\"   • master_data.Location (shared across domains)\")\n",
-    "print(\"=\"*60)\n",
     "\n",
     "################################################################################################\n",
     "# SALES DOMAIN TABLES\n",
@@ -111,10 +91,6 @@
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderPayment (\n",
     "    OrderId STRING,       -- FK to Order table\n",
     "    PaymentId STRING,\n",
-    "    PaymentMethod STRING,\n",
-    "    PaymentAmount DECIMAL(18,2),\n",
-    "    PaymentDate DATE,\n",
-    "    PaymentStatus STRING,\n",
     "    TransactionId STRING\n",
     ")\n",
     "USING DELTA\n",
@@ -122,24 +98,7 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.OrderPayment table created!\")\n",
     "\n",
-    "print(f\"\\n✅ All Sales Domain tables created successfully!\")\n",
-    "print(f\"📊 Sales Domain tables: 3\")\n",
-    "\n",
-    "print(f\"\\n🔗 CROSS-DOMAIN INTEGRATION:\")\n",
-    "print(f\"   • Order.CustomerId → master_data.Customer.CustomerId\")\n",
-    "print(f\"   • OrderLine.ProductId → master_data.Product.ProductId\")\n",
-    "print(f\"   • OrderLine.OrderId → Order.OrderId (Sales domain)\")\n",
-    "print(f\"   • OrderPayment.OrderId → Order.OrderId (Sales domain)\")\n",
-    "\n",
-    "print(f\"\\n🚀 DATA FLOW TO FINANCE:\")\n",
-    "print(f\"   • Sales Order → Finance Invoice\")\n",
-    "print(f\"   • OrderPayment → Finance Payment\") \n",
-    "print(f\"   • Both reference same master_data.Customer\")\n",
-    "\n",
-    "print(f\"\\n📋 NEXT STEPS:\")\n",
-    "print(f\"   1. Generate sample data for Sales tables\")\n",
-    "print(f\"   2. Create Finance Domain tables\") \n",
-    "print(f\"   3. Build data pipeline from Sales → Finance\")"
+    "print(f\"\\n🎉 TABLES CREATION COMPLETE!\")"
    ]
   }
  ],
