--- a/src/notebooks/schema/Model_Shared_Data.ipynb
+++ b/src/notebooks/schema/Model_Shared_Data.ipynb
@@ -5,12 +5,18 @@
    "id": "b34be4c4",
    "metadata": {},
    "source": [
-    "# Semantic Model for Customer, Product, and Sales. Finance model in seperate file. \n",
+    "# Semantic Model for Customer and Product Dimentions. \n",
     "\n",
     "## Schema Structure\n",
-    "- **Customer Management (7 tables)**: Customer, CustomerTradeName, CustomerRelationshipType, Location, CustomerLocation, CustomerAccount, CustomerAccountLocation\n",
-    "- **Product Catalog (2 tables)**: Product, Category\n",
-    "- **Order Processing (3 tables)**: Order, OrderLine, OrderPayment\n"
+    "- **Customer Management (7 tables)**: \n",
+    "- Customer, Samples Ready: Customer_Samples.csv \n",
+    "- CustomerRelationshipType, Samples Ready: CustomerRelationshipType_samples.csv\n",
+    "- CustomerTradeName, Samples Ready: CustomerTradeNames_Samples.csv \n",
+    "- Location, Sample Ready: StreetAddress_Samples.csv\n",
+    "- CustomerLocation, \n",
+    "- CustomerAccount, \n",
+    "- CustomerAccountLocation, \n",
+    "- **Product Catalog (2 tables)**: Product, Category\n"
    ]
   },
   {
@@ -20,26 +26,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simplified and enhanced data model based on out of the box Fabric Retail Data Models \n",
-    "\n",
     "################################################################################################\n",
-    "# Create Schema \n",
+    "# Schema Configuration - MODIFY THIS VALUE\n",
     "################################################################################################\n",
     "\n",
     "# Configuration\n",
-    "SCHEMA_NAME = \"retail_simple\"\n",
+    "SCHEMA_NAME = \"shared\"\n",
     "spark.sql(f\"CREATE DATABASE IF NOT EXISTS {SCHEMA_NAME}\")\n",
     "print(f\"✅ {SCHEMA_NAME} schema ready!\")\n",
-    "\n",
     "\n",
     "################################################################################################\n",
     "# Customers, Contact Info, and Locations. 7 Tables\n",
     "################################################################################################\n",
     "\n",
     "# 1. Create Customer table \n",
-    "#    It can be individuals, business, or government entities\n",
-    "#    If it is business, then CustomerTradeName table will be used to store the trade name\n",
-    "#    and the first name and last name will be the main contact person for the business\n",
+    "print(f\"🔨 Creating Customer table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Customer (\n",
     "    CustomerId STRING,\n",
@@ -67,11 +68,13 @@
     "print(f\"✅ {SCHEMA_NAME}.Customer table created!\")\n",
     "\n",
     "# 2. Create CustomerTradeName table\n",
+    "print(f\"🔨 Creating CustomerTradeName table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerTradeName (\n",
     "    CustomerId STRING,\n",
     "    CustomerTypeId STRING, --Individual, Business, Government\n",
     "    TradeNameId STRING,   \n",
+    "    TradeName STRING,\n",
     "    PeriodStartDate DATE,\n",
     "    PeriodEndDate DATE,\n",
     "    CustomerTradeNameNote STRING\n",
@@ -82,6 +85,7 @@
     "print(f\"✅ {SCHEMA_NAME}.CustomerTradeName table created!\")\n",
     "\n",
     "# 3. Create CustomerRelationshipType table\n",
+    "print(f\"🔨 Creating CustomerRelationshipType table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerRelationshipType (\n",
     "    CustomerRelationshipTypeId STRING,  -- Individual: Standard, Premium, VIP. Business: SMB, Premier, Partner. Government: Federal, State, Local.\n",
@@ -94,9 +98,11 @@
     "print(f\"✅ {SCHEMA_NAME}.CustomerRelationshipType table created!\")\n",
     "\n",
     "# 4. Create Location table\n",
+    "print(f\"🔨 Creating Location table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Location (\n",
     "    LocationId STRING,\n",
+    "    CustomerId STRING,\n",
     "    LocationName STRING,\n",
     "    IsActive BOOLEAN,\n",
     "    AddressLine1 STRING,  -- \"1000 Main St\" \n",
@@ -117,6 +123,7 @@
     "print(f\"✅ {SCHEMA_NAME}.Location table created!\")\n",
     "\n",
     "# 5. Create CustomerLocation table\n",
+    "print(f\"🔨 Creating CustomerLocation table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerLocation (\n",
     "    CustomerId STRING,\n",
@@ -130,6 +137,7 @@
     "print(f\"✅ {SCHEMA_NAME}.CustomerLocation table created!\")\n",
     "\n",
     "# 6. Create CustomerAccount table\n",
+    "print(f\"🔨 Creating CustomerAccount table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerAccount (\n",
     "    CustomerAccountId STRING,\n",
@@ -144,6 +152,7 @@
     "print(f\"✅ {SCHEMA_NAME}.CustomerAccount table created!\")\n",
     "\n",
     "# 7. Create CustomerAccountLocation table\n",
+    "print(f\"🔨 Creating CustomerAccountLocation table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerAccountLocation (\n",
     "    CustomerAccountId STRING,\n",
@@ -161,6 +170,7 @@
     "################################################################################################\n",
     "\n",
     "# 8. Create Product table\n",
+    "print(f\"🔨 Creating Product table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Product (\n",
     "    ProductId STRING,\n",
@@ -171,6 +181,7 @@
     "    Color STRING,\n",
     "    ProductModel STRING,\n",
     "    ProductCategoryID STRING,\n",
+    "    CategoryName STRING,\n",
     "    ListPrice DECIMAL(18,2),\n",
     "    StandardCost DECIMAL(18,2),\n",
     "    Weight DECIMAL(18,3),\n",
@@ -189,11 +200,13 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.Product table created!\")\n",
     "\n",
-    "# 9. Create Brand table\n",
+    "# 9. Create Category table\n",
+    "print(f\"🔨 Creating Category table...\")\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Category(\n",
     "    CategoryId STRING,\n",
     "    ParentCategoryId STRING,\n",
+    "    CategoryName STRING,\n",
     "    CategoryDescription STRING,\n",
     "    BrandName STRING,\n",
     "    BrandLogoUrl STRING,\n",
@@ -204,78 +217,7 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.Category table created!\")\n",
     "\n",
-    "\n",
-    "################################################################################################\n",
-    "# Orders - 3 Tables\n",
-    "################################################################################################\n",
-    "\n",
-    "# 10. Create Order table\n",
-    "create_table_sql = f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Order (\n",
-    "    OrderId STRING,       -- Unique identifer like UUID\n",
-    "    OrderNumber STRING,   -- Customer-facing order number\n",
-    "    CustomerId STRING,\n",
-    "    CustomerAccountId STRING,\n",
-    "    OrderDate DATE,\n",
-    "    OrderStatus STRING,\n",
-    "    OrderTotal DECIMAL(18,2),\n",
-    "    SubTotal DECIMAL(18,2),\n",
-    "    TaxAmount DECIMAL(18,2),\n",
-    "    ShippingAmount DECIMAL(18,2), -- ShipingCost, Standard retail transaction terminology\n",
-    "    DiscountAmount DECIMAL(18,2),\n",
-    "    PaymentMethod STRING,\n",
-    "    ShippingAddress STRING,\n",
-    "    BillingAddress STRING,\n",
-    "    OrderNotes STRING,\n",
-    "    CreatedTimestamp TIMESTAMP,\n",
-    "    UpdatedTimestamp TIMESTAMP,\n",
-    "    IsoCurrencyCode STRING,\n",
-    "    StoreId STRING,\n",
-    "    Status STRING,\n",
-    "    SalesChannelId STRING,\n",
-    "    CreatedBy STRING \n",
-    ")\n",
-    "USING DELTA\n",
-    "\"\"\"\n",
-    "spark.sql(create_table_sql)\n",
-    "print(f\"✅ {SCHEMA_NAME}.Order table created!\")\n",
-    "\n",
-    "# 11. Create OrderLine table\n",
-    "create_table_sql = f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderLine (\n",
-    "    OrderId STRING,\n",
-    "    OrderLineNumber INT,\n",
-    "    ProductId STRING,\n",
-    "    ProductName STRING,\n",
-    "    Quantity DECIMAL(18,2),\n",
-    "    UnitPrice DECIMAL(18,2),\n",
-    "    LineTotal DECIMAL(18,2),\n",
-    "    DiscountAmount DECIMAL(18,2),\n",
-    "    TaxAmount DECIMAL(18,2)\n",
-    ")\n",
-    "USING DELTA\n",
-    "\"\"\"\n",
-    "spark.sql(create_table_sql)\n",
-    "print(f\"✅ {SCHEMA_NAME}.OrderLine table created!\")\n",
-    "\n",
-    "# 12. Create OrderPayment table\n",
-    "create_table_sql = f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderPayment (\n",
-    "    OrderId STRING,\n",
-    "    PaymentId STRING,\n",
-    "    PaymentMethod STRING,\n",
-    "    PaymentAmount DECIMAL(18,2),\n",
-    "    PaymentDate DATE,\n",
-    "    PaymentStatus STRING,\n",
-    "    TransactionId STRING\n",
-    ")\n",
-    "USING DELTA\n",
-    "\"\"\"\n",
-    "spark.sql(create_table_sql)\n",
-    "print(f\"✅ {SCHEMA_NAME}.OrderPayment table created!\")\n",
-    "\n",
-    "print(f\"✅ All {SCHEMA_NAME} tables created successfully!\")\n",
-    "print(f\"📊 Total tables created: 12\")"
+    "print(f\"\\n🎉 SCHEMA and TABLES CREATION COMPLETE!\")"
    ]
   }
  ],
