--- a/src/notebooks/generate_samples/Generate_CustomerRelationshipType.ipynb
+++ b/src/notebooks/generate_samples/Generate_CustomerRelationshipType.ipynb
@@ -16,7 +16,7 @@
     "- **Government Customers**: Federal, State, Local tiers\n",
     "\n",
     "## Output\n",
-    "- File: `C:\\temp\\samples\\CustomerRelationshipType_samples.csv`\n",
+    "- File: `C:\\temp\\samples\\output\\CustomerRelationshipType_samples.csv`\n",
     "- Contains CustomerRelationshipTypeId, Name, and Description for all relationship types\n",
     "\n",
     "---"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a90b8f9b",
    "metadata": {},
    "outputs": [
@@ -32,6 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "🗑️ Removed existing file: C:\\temp\\samples\\CustomerRelationshipType_Samples.csv\n",
       "🎯 GENERATING CUSTOMER RELATIONSHIP TYPE REFERENCE DATA\n",
       "Output: C:\\temp\\samples\\CustomerRelationshipType_Samples.csv\n",
       "==================================================\n",
@@ -44,7 +45,7 @@
     "import os\n",
     "\n",
     "# Configuration\n",
-    "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
+    "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\\\\output\"\n",
     "OUTPUT_FILE = \"CustomerRelationshipType_Samples.csv\"\n",
     "\n",
     "# Create output directory\n",
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "5d31f77a",
    "metadata": {},
    "outputs": [
