--- a/src/notebooks/generate_samples/Generate_Location.ipynb
+++ b/src/notebooks/generate_samples/Generate_Location.ipynb
@@ -15,9 +15,9 @@
     "- **Common street names** (Main St, Oak Ave, etc.)\n",
     "- **Incorrect zip codes** to ensure fake addresses (e.g., Buffalo, NY 98052)\n",
     "- **Real city/state combinations** but wrong zip codes\n",
-    "\n",
+    "- **Specific Guidelines** Street addresses: you should use sequential numbers, common street names, and incorrect zip codes (e.g., 4567 Main St Buffalo, NY 98052).\n",
     "## Output\n",
-    "- File: `C:\\temp\\samples\\StreetAddress_Samples.csv`\n",
+    "- File: `C:\\temp\\samples\\output\\Location_Samples.csv`\n",
     "- Contains 520 unique street addresses for Location table\n",
     "\n",
     "---"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "2ee0c7a8",
    "metadata": {},
    "outputs": [
@@ -33,10 +33,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🗑️ Removed existing file: C:\\temp\\samples\\StreetAddress_Samples.csv\n",
       "🎯 GENERATING STREET ADDRESS SAMPLE DATA\n",
       "Sample Size: 513\n",
-      "Output: C:\\temp\\samples\\StreetAddress_Samples.csv\n",
+      "Output: C:\\temp\\samples\\output\\Location_Samples.csv\n",
       "==================================================\n",
       "🔄 Generating address data...\n",
       "✅ Address generation complete!\n"
@@ -57,8 +56,8 @@
     "\n",
     "# Configuration\n",
     "SAMPLE_SIZE = 513  # Number of address records to generate\n",
-    "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\"\n",
-    "OUTPUT_FILE = \"StreetAddress_Samples.csv\"\n",
+    "OUTPUT_FOLDER = \"C:\\\\temp\\\\samples\\\\output\"\n",
+    "OUTPUT_FILE = \"Location_Samples.csv\"\n",
     "\n",
     "# Create output directory\n",
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a4953b3c",
    "metadata": {},
    "outputs": [
@@ -342,7 +341,7 @@
       "  ✅ Incorrect zip codes: Real cities with wrong zips\n",
       "  ✅ No real addresses: All combinations are intentionally fake\n",
       "\n",
-      "💾 SAVED TO: C:\\temp\\samples\\StreetAddress_Samples.csv\n",
+      "💾 SAVED TO: C:\\temp\\samples\\output\\Location_Samples.csv\n",
       "📊 Total Records: 513\n",
       "📈 Columns: LocationId, CustomerId, LocationName, IsActive, AddressLine1, AddressLine2, City, StateId, ZipCode, CountryId, SubdivisionName, Region, Latitude, Longitude, Note\n",
       "\n",
